--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "fastify-formbody": "^5.0.0",
     "fastify-static": "^4.0.0",
     "handlebars": "^4.7.7",
-    "point-of-view": "^4.14.0"
+    "point-of-view": "^4.14.0",
+    "axios": "^0.23.0"
   },
   "engines": {
     "node": "12.x"
